--- a/src/index.html
+++ b/src/index.html
@@ -5,36 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThreeJS Starter</title>
   </head>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.123.0/examples/js/libs/ammo.wasm.js"></script>
-  <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
-  <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-  <body>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.123.0/examples/js/libs/ammo.wasm.js"></script> 
+  <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <body style="margin : 0px; overflow: hidden;">
     <!-- <canvas class="webgl"></canvas> -->
-    <div id="container">
-      <canvas></canvas>
-    </div>
+   
 
-<div id=" arjs_scene ">
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-          <!-- we use cors proxy to avoid cross-origin problems -->
-  
-          <!--
-            ⚠️⚠️⚠️
-            https://arjs-cors-proxy.herokuapp.com/ is now offline, Heroku has dismissed all his free plans from November 2022.
-            You need to host your own proxy and use it instead. The proxy is based on CORS Anywhere (see https://github.com/Rob--W/cors-anywhere).
-            ⚠️⚠️⚠️
-          -->
-          <a-entity
-            position="0 0 0"
-            scale="0.05 0.05 0.05"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-          ></a-entity>
-        </a-marker>
-        <a-entity camera></a-entity>
-      </a-scene>
+<div id="arjs_scene">
+  <a-scene embedded arjs>
+    <a-marker preset="hiro">
+        <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
+        <a-entity
+        position="0 0 0"
+        scale="0.05 0.05 0.05"
+        gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        ></a-entity>
+    </a-marker>
+    <a-entity camera></a-entity>
+    </a-scene>
 </div>
+<!-- <div class="container" id="container">
+  <canvas></canvas>
+</div> -->
+
 
   </body>
 </html>
